# priya_financial

./: .gitignore  UPLOAD_GUIDE.md  main.py
backend/: db.py  main.py  pipeline.py  pyproject.toml
backend/InputTallyTarka/apr/: 060e72c98db44366834d826aee213c69_core.xlsx  ed10b04d07c7479c8546242ac941aa12_balance.xlsx
backend/InputTallyTarka/mar/: 338920f7553b40108b112a76c87b324b_balance.xlsx
backend/InputTallyTarka/may/: 1.Apr 26 SKU Sales  Purchase.xlsx  1.PMC_Apr26.xlsx  dd4e6cfa9ef94cde96b8cb0cec55fc6c_balance.xlsx
backend/sheets/: __init__.py  calculate_consumption_output.py  calculate_contribution.py  calculate_direct_expenses_output.py  calculate_kpis.py  calculate_mty.py  calculate_pal_1.py  db.py  ingest_balance_sheet.py  ingest_direct_expenses.py  ingest_hdpe_discount.py  ingest_indirect_expenses.py  ingest_inventory_sales.py  ingest_item_purchases.py  ingest_item_sales.py  ingest_product_specification.py  ingest_purchases.py  ingest_reconcile.py  ingest_salary.py  ingest_stock_valuation.py  mty_25_26.py  run_full_pipeline.py
backend/uploads/: dcad2cea5a504b15bb0b5a4b0f158ef7_item_sales.xlsx  fb29ad982742477b8c3ff3a39025ba2e_item_sales.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AppSidebar.tsx  DetailedBreakdown.tsx  FilterBar.tsx  GroupedKpiTable.tsx  HeroMetricsPanel.tsx  LedgerTable.tsx  MetricCard.tsx  SectionExpander.tsx  TopBarRight.tsx  TrendChart.tsx
frontend/src/hooks/: useTheme.tsx
frontend/src/lib/: format.ts  pivot.ts
(+7 files in other folders)
